--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ templates/homeCopy.html
 templates/uploadCopy.html
 .vscode/
 __pycache__/
-static/uploaded/
+static/images/
 migrations/
 src/__pycache__/
